[package]
name = "power-monitor-rust"
version = "0.1.0"
authors = ["Greg Green <ggreen@bit-builder.com>"]
edition = "2018"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
avr-device = "0.2.3"
nb = "1.0.0"

[dependencies.chart-plotter-hat]
version = "0.1.0"
features = ["proto-board"]

[dependencies.avr-hal-generic]
git = "https://github.com/Rahix/avr-hal"
rev = "206ff87bdc38afcffd9db1c9326c0d4d9487cb14"

[dependencies.atmega328p-hal]
git = "https://github.com/Rahix/avr-hal"
rev = "206ff87bdc38afcffd9db1c9326c0d4d9487cb14"
features = ["atmega328p"]

[patch.crates-io]
chart-plotter-hat = { path = "/spare/export/src/rust/src/chart-plotter-hat" }
avr-device = { path = "/spare/export/src/rust/src/avr-device" }

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"